kubernetes/production/users-service-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: users-service
  name: users-service
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: "8080"
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: "8081"
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: users-service
  type: LoadBalancer
